--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,14 +4,9 @@
 <div class="row">
   <div class="col">
     <app-characters [characters]="characters"></app-characters>
-    <!--
-      <ul>
-       <li *ngFor="let character of characters">{{character.name}} - {{character.power | number}}</li>
-      </ul>
-    -->
   </div>
   <div class="col">
-    <h3>Add Character</h3>
+    <!--<h3>Add Character</h3>
     <hr />
     <form (ngSubmit)="add()">
       <input
@@ -28,5 +23,5 @@
       />
       <button type="submit">Add</button>
     </form>
-  </div>
+  --></div>
 </div>
