--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -6,22 +6,7 @@
     <app-characters [characters]="characters"></app-characters>
   </div>
   <div class="col">
-    <!--<h3>Add Character</h3>
-    <hr />
-    <form (ngSubmit)="add()">
-      <input
-        type="text"
-        placeholder="Name"
-        name="name"
-        [(ngModel)]="new.name"
-      />
-      <input
-        type="number"
-        placeholder="Power"
-        name="power"
-        [(ngModel)]="new.power"
-      />
-      <button type="submit">Add</button>
-    </form>
-  --></div>
+    <app-add-character [new]="new" (onNewCharacter)="addNewCharacter($event)">
+    </app-add-character>
+  </div>
 </div>
