--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,10 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <app-characters [characters]="characters"></app-characters>
+    <app-characters></app-characters>
   </div>
   <div class="col">
-    <app-add-character [new]="new" (onNewCharacter)="addNewCharacter($event)">
+    <app-add-character [new]="new">
     </app-add-character>
   </div>
 </div>
